--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/myfavicon.ico" />
+    <link
+      rel="shortcut icon"
+      href="https://image.made-in-china.com/2f0j00eELYRunamvzT/Wholesale-Ceramic-Pink-Piggy-Bank.jpg"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
